Tried GraphQL query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.graphql.graphiql,enabled=true
