--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,7 @@ build/
 .vscode/
 
 ### dev.properties ###
-resources/application-dev.properties
+src/main/resources/application-dev.properties
+
+### logs ###
+logs/
