--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.graphql.graphiql,enabled=true
+spring.profiles.active=dev
