--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,19 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.napstr</groupId>
+			<artifactId>logback-discord-appender</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
+	<repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
 	<build>
 		<plugins>
