--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,13 @@
 			<artifactId>logback-discord-appender</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
+	
 	<repositories>
         <repository>
             <id>jitpack.io</id>
