--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 ### dev.properties ###
-src/main/resources/application-dev.properties
+# src/main/resources/application-dev.properties
