--- a/.github/workflows/CI-workflow.yml
+++ b/.github/workflows/CI-workflow.yml
@@ -11,6 +11,6 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: "11"
-          distribution: "temurin"
+          distribution: "adopt"
       - name: Build with Maven
-        run: mvn clean build -x test
+        run: mvn --batch-mode --update-snapshots package
