Commit dev.properties for CI workflow

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,12 +11,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # spring.datasource.driverClassName=org.h2.Driver
 # spring.datasource.username=sa
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql:///postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql:///${DB_DATABASE:postgres}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 # gcp cloud sql
 spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
-spring.datasource.hikari.data-source-properties.cloudSqlInstance=artful-willow-361400:us-central1:findmytutor
+spring.datasource.hikari.data-source-properties.cloudSqlInstance=${DB_CLOUD_SQL_INSTANCE:artful-willow-361400:us-central1:findmytutor}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.datasource.initialization-mode=always
 
