--- a/.github/workflows/google-cloudrun.yml
+++ b/.github/workflows/google-cloudrun.yml
@@ -66,7 +66,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "temurin"
+
+      - name: Build with Maven
+        run: mvn clean install
 
       - name: Google Auth
         id: auth
