--- a/.github/workflows/google-cloudrun.yml
+++ b/.github/workflows/google-cloudrun.yml
@@ -65,6 +65,23 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "temurin"
+
+      - uses: gyu-park/findmytutor-project@v1
+        with:
+          creds: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          instance: artful-willow-361400:us-central1:findmytutor
+
+      - name: Build with Maven
+        run: mvn clean install
+
       - name: Google Auth
         id: auth
         uses: "google-github-actions/auth@v0"
@@ -81,18 +98,6 @@ jobs:
       #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}''
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
-
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: "11"
-          distribution: "temurin"
-
-      - name: Build with Maven
-        run: mvn clean install
 
       # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
