--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,9 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.driverClassName=org.h2.Driver
 # spring.datasource.username=sa
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql:///${DB_DATABASE:postgres}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.url=jdbc:postgresql://${INSTANCE_HOST:127.0.0.0}:${DB_PORT:1234}/${DB_NAME:postgres}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
 # gcp cloud sql
 spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
 spring.datasource.hikari.data-source-properties.cloudSqlInstance=${DB_CLOUD_SQL_INSTANCE:artful-willow-361400:us-central1:findmytutor}
