Update a deploy cloudrun workflow

--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,10 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>com.google.cloud.sql</groupId>
