--- a/pom.xml
+++ b/pom.xml
@@ -99,12 +99,12 @@
 
 	</dependencies>
 
-	<!-- <repositories>
+	<repositories>
 		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
 		</repository>
-	</repositories> -->
+	</repositories>
 
 	<build>
 		<plugins>
