--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ spring.datasource.password=${DB_PASS:postgres}
 spring.datasource.hikari.data-source-properties.socketFactory=com.google.cloud.sql.postgres.SocketFactory
 spring.datasource.hikari.data-source-properties.cloudSqlInstance=${DB_CLOUD_SQL_INSTANCE:artful-willow-361400:us-central1:findmytutor}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.datasource.initialization-mode=always
+# spring.datasource.initialization-mode=always
 
 spring.flyway.baseline-on-migrate=true
 
