--- a/.github/workflows/google-cloudrun.yml
+++ b/.github/workflows/google-cloudrun.yml
@@ -65,13 +65,14 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      # NOTE: Alternative option - authentication via credentials json
       - name: Google Auth
-        id: auth
-        uses: "google-github-actions/auth@v0"
-        with:
-          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
-
+          id: auth
+          uses: "google-github-actions/auth@v0"
+          with:
+            token_format: "access_token"
+            workload_identity_provider: projects/475350064313/locations/global/workloadIdentityPools/my-pool/providers/my-provider
+            service_account: my-service-account@artful-willow-361400.iam.gserviceaccount.com
+            
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -84,13 +85,12 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
 
+      # NOTE: Alternative option - authentication via credentials json
       # - name: Google Auth
       #   id: auth
-      #   uses: "google-github-actions/auth@v0"
+      #   uses: 'google-github-actions/auth@v0'
       #   with:
-      #     token_format: "access_token"
-      #     workload_identity_provider: projects/475350064313/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-      #     service_account: my-service-account@artful-willow-361400.iam.gserviceaccount.com
+      #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}''
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
